User-Profile Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,14 @@
         <ion-grid>
           <ion-row>
             <ion-col>
-              <!-- <ion-item> -->
-                <ion-avatar>
-                  <img src="https://gmsrp.cachefly.net/images/20/02/16/183f4fb7647bbacc21454d8cffda78d1/320.jpg">
-                </ion-avatar>
-                <ion-label padding>Sam</ion-label>
-              <!-- </ion-item> -->
+              <ion-menu-toggle>
+                <ion-item lines="none" routerLink="user-profile" class="my-class">
+                  <ion-avatar>
+                    <img src="https://gmsrp.cachefly.net/images/20/02/16/183f4fb7647bbacc21454d8cffda78d1/320.jpg">
+                  </ion-avatar>
+                  <ion-label padding>Sam</ion-label>
+                </ion-item>
+              </ion-menu-toggle>
             </ion-col>
           </ion-row>
         </ion-grid>
