Bookings and User profile improved

--- a/src/app/authentication-admin/posts/posts.page.html
+++ b/src/app/authentication-admin/posts/posts.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/sport-stuff"></ion-back-button>
     </ion-buttons>
-    <ion-title>Post Football Fields</ion-title>
+    <ion-title>Posting</ion-title>
   </ion-toolbar>
 </ion-header>
 
