--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -7,7 +7,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<iframe height="90%" width="100%" src="https://bot.dialogflow.com/8f13ba86-e4f2-4598-b8a5-b839be37d8b3"></iframe>
+
+<!-- <ion-content padding>
   <ion-grid>
     <ion-row>
       <ion-col size="9" class="message user-message">
@@ -38,4 +40,4 @@
       </ion-col>
     </ion-row>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
