--- a/src/app/football-fields/bookings/create-bookings/create-bookings.component.html
+++ b/src/app/football-fields/bookings/create-bookings/create-bookings.component.html
@@ -26,7 +26,7 @@
     </ion-row>
     <ion-row *ngFor="let times of bookingTimes" text-center>
       <ion-col>{{ times }} - {{ times + 1 }}</ion-col>
-      <ion-col class="my-col"><ion-button expand="block" (click)="onClickBooking(times, today)">{{ isBooked ? 'Booked' : ''}}</ion-button></ion-col>
+      <ion-col class="my-col"><ion-button expand="block" (click)="onClickBooking(times, today)">{{ myvar === times ? 'Booked' : '' }}</ion-button></ion-col>
       <ion-col class="my-col"><ion-button expand="block" (click)="onClickBooking(times, tomorrow)"></ion-button></ion-col>
       <ion-col class="my-col"><ion-button expand="block" (click)="onClickBooking(times, ThridDay)"></ion-button></ion-col>
     </ion-row>
