--- a/src/app/authentication-admin/posts/news-posting/news-posting.page.html
+++ b/src/app/authentication-admin/posts/news-posting/news-posting.page.html
@@ -1,37 +1,14 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/authentication-admin/posts"></ion-back-button>
-    </ion-buttons>
-    <ion-title>News Posting</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button (click)="onCreatePost()" [disabled]="!form.valid">
-        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <form [formGroup]="form">
-    <ion-grid>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-item>
-            <ion-label position="floating">Title</ion-label>
-            <ion-input type="text" autocomplete formControlName="title"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Text</ion-label>
-            <ion-textarea rows="6" type="text" formControlName="text"></ion-textarea>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="post-news">
+        <ion-label>Post</ion-label>
+        <ion-icon name="add-circle"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="edit-news">
+        <ion-label>Edit</ion-label>
+        <ion-icon name="create"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
