Integraton with Dialogflow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
               <ion-menu-toggle>
                 <ion-item lines="none" routerLink="user-profile" class="my-class">
                   <ion-avatar>
-                    <img src="https://gmsrp.cachefly.net/images/20/02/16/183f4fb7647bbacc21454d8cffda78d1/320.jpg">
+                    <img src="assets\icon\default-image.png">
                   </ion-avatar>
                   <ion-label padding>Sam</ion-label>
                 </ion-item>
@@ -41,7 +41,7 @@
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="sport-stuff">
-            <ion-icon name="shirt" slot="start"></ion-icon>
+            <ion-icon src="assets\icon\cart-outline.svg" slot="start"></ion-icon>
             <ion-label>Sport Stuff</ion-label>
           </ion-item>
         </ion-menu-toggle>
