--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -9,9 +9,19 @@
     color: #ffffff;
 }
 
+.bot-message {
+    background: #E9E9E9;
+    color: #000000;
+}
+
 .msg-input {
     width: 100%;
     color: black;
     border-radius: 10px;
     background: #ffffff;
+}
+
+.a {
+    width: 40px;
+    height: 40px;
 }
