--- a/src/app/football-fields/football-fields.page.html
+++ b/src/app/football-fields/football-fields.page.html
@@ -21,7 +21,7 @@
             </ion-thumbnail>
             <ion-label>
               <h2>{{ fields.name }}</h2>
-              <p>{{ fields.address }}</p>
+              <p><ion-icon src="assets\icon\location.svg"></ion-icon> {{ fields.address }}</p>
             </ion-label>
           </ion-item>
         </ion-virtual-scroll>
