--- a/src/app/home/main-page/main-page.page.html
+++ b/src/app/home/main-page/main-page.page.html
@@ -15,5 +15,16 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <!-- <ion-slides pager autoplay="1500" loop="true">
+    <ion-slide>
+      <p>Hello 1</p>    
+    </ion-slide>
+    <ion-slide>
+      <p>Hello 2</p>    
+    </ion-slide>
+    <ion-slide>
+      <p>Hello 3</p>    
+    </ion-slide>    
+  </ion-slides> -->
 </ion-content>
 
