--- a/src/app/other-sport-clubs/other-sport-clubs.page.html
+++ b/src/app/other-sport-clubs/other-sport-clubs.page.html
@@ -21,7 +21,7 @@
                 </ion-thumbnail>
                 <ion-label>
                   <h2>{{ clubs.name }}</h2>
-                  <ion-text>{{ clubs.address }}</ion-text>
+                  <ion-text><ion-icon src="assets\icon\location.svg"></ion-icon>{{ clubs.address }}</ion-text>
                 </ion-label>
               </ion-item>
             </ion-list>
