--- a/src/app/authentication/authentication.page.html
+++ b/src/app/authentication/authentication.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title text-center>SportsKG</ion-title>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="2" offset="5">
+          <ion-img src="assets\icon\SportsKG.png"></ion-img>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 
