--- a/src/app/forum/forum.page.html
+++ b/src/app/forum/forum.page.html
@@ -17,7 +17,9 @@
             <ion-textarea rows="4" formControlName="content"></ion-textarea>
           </ion-item>
           <div text-end>
-            <ion-button (click)="onCreatePost()" [disabled]="!form.valid">Post</ion-button>
+            <ion-button (click)="onCreatePost()" [disabled]="!form.valid">
+              Post
+            </ion-button>
           </div>
         </ion-col>
       </ion-row>
@@ -28,7 +30,7 @@
   </div>
   <ion-card *ngIf="!isLoading">
     <ion-card-header>
-      <h3 text-center>Posts</h3>j
+      <h3 text-center>Posts</h3>
     </ion-card-header>
     <ion-virtual-scroll [items]="loadedPosts">
       <ion-item [routerLink]="['/', 'forum', post.id]" *virtualItem="let post">
