--- a/src/app/news/news.page.html
+++ b/src/app/news/news.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<!-- <ion-content>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
@@ -27,4 +27,22 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+</ion-content> -->
+
+<ion-content>
+  <ion-card *ngFor="let news of loadedNews">
+    <ion-toolbar>
+      <ion-title text-center>{{ news.title}}</ion-title>
+    </ion-toolbar>
+    <ion-card-content>
+      <ion-item [routerLink]="['/', 'news', news.id]" detail>
+        <ion-thumbnail slot="start">
+          <ion-img [src]="news.imgUrl"></ion-img>          
+        </ion-thumbnail>
+        <ion-label>
+          <h2>{{ news.text }}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
