Profile Page improved and some minor changes in Sport Stuff and Chatbot UI

--- a/src/app/football-fields/field-details/field-details.page.html
+++ b/src/app/football-fields/field-details/field-details.page.html
@@ -22,6 +22,7 @@
             <p><b>Contact Number: </b>{{ footballField.contNum }}</p>
             <div text-center>
               <ion-button (click)="onBookField()">Book</ion-button>
+              <ion-button (click)="onAddFavField()">Fav List</ion-button>
             </div>
             <h6>Photos</h6>
             <ion-img [src]="footballField.imgUrl"></ion-img> 
