--- a/src/app/news/news.page.html
+++ b/src/app/news/news.page.html
@@ -29,20 +29,25 @@
   </ion-grid>
 </ion-content> -->
 
-<ion-content>
-  <ion-card *ngFor="let news of loadedNews">
-    <ion-toolbar>
-      <ion-title text-center>{{ news.title}}</ion-title>
-    </ion-toolbar>
-    <ion-card-content>
-      <ion-item [routerLink]="['/', 'news', news.id]" detail>
-        <ion-thumbnail slot="start">
-          <ion-img [src]="news.imgUrl"></ion-img>          
-        </ion-thumbnail>
-        <ion-label>
-          <h2>{{ news.text }}</h2>
-        </ion-label>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
+<ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
+        <div *ngIf="isLoading" text-center>
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
+        <ion-virtual-scroll [items]="loadedNews" *ngIf="!isLoading && loadedNews.length > 0">
+          <ion-item [routerLink]="['/', 'news', news.id]" detail *virtualItem="let news">
+            <ion-thumbnail slot="start">
+              <ion-img [src]="news.imgUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{ news.title }}</h2>
+              <!-- <p>{{ fields.address }}</p> -->
+            </ion-label>
+          </ion-item>
+        </ion-virtual-scroll>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
