--- a/src/app/other-sport-clubs/other-sport-clubs.page.html
+++ b/src/app/other-sport-clubs/other-sport-clubs.page.html
@@ -23,6 +23,7 @@
                   <h2>{{ clubs.name }}</h2>
                   <ion-text><ion-icon src="assets\icon\location.svg"></ion-icon>{{ clubs.address }}</ion-text>
                 </ion-label>
+                <ion-button item-end clear>View</ion-button>
               </ion-item>
             </ion-list>
           </ion-col>
