--- a/src/app/sport-stuff/sport-stuff.page.html
+++ b/src/app/sport-stuff/sport-stuff.page.html
@@ -13,23 +13,18 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-sm="6" offset-sm="3" text-center>
-        <div *ngIf="isLoading" text-center>
-          <ion-spinner color="primary"></ion-spinner>
-        </div>
-        <ion-list *ngIf="!isLoading">
-          <ion-item *ngFor="let stuffs of loadedSportStuff" [routerLink]="['/', 'sport-stuff', stuffs.id]">
-            <ion-thumbnail>
-              <ion-img [src]="stuffs.imgUrl"></ion-img>
-            </ion-thumbnail>
-            <ion-label>
-              <h2>{{ stuffs.name }}</h2>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div *ngIf="isLoading" text-center>
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <div *ngIf="!isLoading">
+    <ion-card *ngFor="let stuffs of loadedSportStuff" text-center class="myDesign" [routerLink]="['/', 'sport-stuff', stuffs.id]">
+      <img [src]="stuffs.imgUrl"/>
+      <ion-card-content>
+        <ion-card-title text-center>
+          {{stuffs.name}}
+        </ion-card-title>
+        <p>Price: {{ stuffs.price }}</p>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
