--- a/src/app/sport-stuff/sport-stuff.page.scss
+++ b/src/app/sport-stuff/sport-stuff.page.scss
@@ -1,4 +1,8 @@
-ion-item{
+.myDesign {
     width: 45%;
+    height: 250px;
     display: inline-block;
+}
+ion-card img{
+    max-height: 180px;
 }
