--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item lines="none" routerLink="sport-stuff">
+          <ion-item lines="none" routerLink="contact">
             <ion-icon name="mail" slot="start"></ion-icon>
             <ion-label>Contact</ion-label>
           </ion-item>
