User Messages added to Admin section

--- a/src/app/authentication-admin/posts/posts.page.html
+++ b/src/app/authentication-admin/posts/posts.page.html
@@ -21,6 +21,10 @@
             <ion-label>Post News</ion-label>
             <ion-button routerLink="/authentication-admin/posts/news-posting">Go</ion-button>
           </ion-item>
+          <ion-item>
+            <ion-label>Users Messages</ion-label>
+            <ion-button routerLink="/authentication-admin/posts/user-messages">Go</ion-button>
+          </ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
