--- a/src/app/football-fields/football-fields.page.html
+++ b/src/app/football-fields/football-fields.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-searchbar (ionInput)="searchField($event)" #searchInput></ion-searchbar>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
