--- a/src/app/other-sport-clubs/other-sport-clubs.page.html
+++ b/src/app/other-sport-clubs/other-sport-clubs.page.html
@@ -7,7 +7,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <ion-searchbar (ionInput)="searchClub($event)" #searchInput></ion-searchbar>
     <ion-grid>
         <ion-row>
           <ion-col size="12" size-sm="8" offset-sm="2" text-center>
