UI updated in all pages

--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -15,7 +15,7 @@
           <ion-img src="../../assets/icon/SportsKG.png"></ion-img>
         </ion-col>
         <ion-col>
-          <p>Get in touch with us. Send us any idea and suggestions through messages. Help us improve our services.</p>
+          <p text-justify>Get in touch with us. Send us any idea and suggestions through messages. Help us improve our services.</p>
         </ion-col>
       </ion-row>
       <ion-row>
