--- a/src/app/other-sport-clubs/other-sport-clubs.page.html
+++ b/src/app/other-sport-clubs/other-sport-clubs.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-searchbar (ionInput)="searchClub($event)" #searchInput></ion-searchbar>
     <ion-grid>
         <ion-row>
