--- a/src/app/user-profile/user-profile.page.html
+++ b/src/app/user-profile/user-profile.page.html
@@ -16,7 +16,7 @@
       <ion-col>
         <div text-center>
           <h4>Samim Qeyam</h4>
-          <ion-button type="submit" (click)="onProfileEdit()">Edit Profile</ion-button>
+          <ion-button type="submit" [routerLink]="['/', 'user-profile', 'edit-profile']">Edit Profile</ion-button>
         </div>
       </ion-col>
     </ion-row>
