--- a/src/app/football-fields/field-details/field-details.page.html
+++ b/src/app/football-fields/field-details/field-details.page.html
@@ -8,9 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col size="12" size-sm="8" offset-sm="2"> -->
         <div text-center *ngIf="isLoading">
           <ion-spinner color="primary"></ion-spinner>
         </div>
@@ -24,11 +24,11 @@
               <ion-button (click)="onBookField()">Book</ion-button>
               <ion-button (click)="onAddFavField()">Fav List</ion-button>
             </div>
-            <h6>Photos</h6>
+            <h6><b>Photos</b></h6>
             <ion-img [src]="footballField.imgUrl"></ion-img> 
           </div>
         </ion-card>
-      </ion-col>
+      <!-- </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
