--- a/src/app/football-fields/football-fields.page.html
+++ b/src/app/football-fields/football-fields.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-searchbar (ionInput)="searchField($event)" #searchInput></ion-searchbar>
   <ion-grid>
     <ion-row>
