--- a/src/app/forum/post-details/post-details.page.html
+++ b/src/app/forum/post-details/post-details.page.html
@@ -8,22 +8,22 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col size="12" size-sm="8" offset-sm="2"> -->
         <div text-center *ngIf="isLoading">
           <ion-spinner color="primary"></ion-spinner>
         </div>
         <ion-card *ngIf="!isLoading">
           <div padding>
-            <p>{{ post.posterId }}: {{ post.content }}</p>
-            <p text-end>Posted on: {{ post.postDate | date:'dd/MM/yyyy'}}</p>
+            <p text-justify><b>{{ post.posterId }}:</b> {{ post.content }}</p>
+            <p text-end><b>Posted on:</b> {{ post.postDate | date:'dd/MM/yyyy'}}</p>
           </div>
         </ion-card>
-      </ion-col>
+      <!-- </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col size="12" size-sm="8" offset-sm="2"> -->
         <form [formGroup]="form">
           <ion-grid>
             <ion-row>
@@ -39,7 +39,21 @@
             </ion-row>
           </ion-grid>
         </form>
-      </ion-col>
+        <ion-grid>
+          <ion-row>
+            <ion-col offset="2" size="10">
+              <ion-virtual-scroll [items]="loadedComments" *ngIf="!isLoading && loadedComments.length > 0">
+                <ion-card *virtualItem="let comment">
+                  <div padding>
+                    <p text-justify>{{ comment.comment}}</p>
+                    <p text-end><b>{{ comment.postDate | date:'dd/MM/yyyy'}}</b></p>
+                  </div>
+                </ion-card>
+              </ion-virtual-scroll>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      <!-- </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
