--- a/src/app/news/news-detail/news-detail.page.html
+++ b/src/app/news/news-detail/news-detail.page.html
@@ -8,21 +8,21 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col size="12" size-sm="8" offset-sm="2"> -->
         <div text-center *ngIf="isLoading">
           <ion-spinner color="primary"></ion-spinner>
         </div>
         <ion-card *ngIf="!isLoading">
-          <ion-img [src]="news.imgUrl"></ion-img>
-          <ion-card-title padding text-center>{{ news.title }}</ion-card-title>
-          <div>
-            <p>{{ news.text }}</p>
-            <p text-end>Posted on: {{ news.postDate | date:'dd/MM/yyyy'}}</p>
+          <div padding>
+            <ion-img [src]="news.imgUrl"></ion-img>
+            <ion-card-title padding-top text-center>{{ news.title }}</ion-card-title>
+            <p text-justify>{{ news.text }}</p>
+            <p text-end><b>Posted on:</b> {{ news.postDate | date:'dd/MM/yyyy'}}</p>
           </div>
         </ion-card>
-      </ion-col>
+      <!-- </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
