--- a/src/app/sport-stuff/sport-stuff.page.scss
+++ b/src/app/sport-stuff/sport-stuff.page.scss
@@ -3,6 +3,18 @@
     height: 250px;
     display: inline-block;
 }
+
 ion-card img{
     max-height: 180px;
+}
+
+.my-design {
+    height: 20rem;
+    max-height: 25vh;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
