--- a/src/app/sport-stuff/stuff-details/stuff-details.page.html
+++ b/src/app/sport-stuff/stuff-details/stuff-details.page.html
@@ -8,26 +8,30 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col size="12" size-sm="8" offset-sm="2"> -->
         <div text-center *ngIf="isLoading">
           <ion-spinner color="primary"></ion-spinner>
         </div>
         <ion-card padding *ngIf="!isLoading">
           <ion-card-title text-center>{{ sportStuff.name }}</ion-card-title>
-          <p>Description: {{ sportStuff.description }}</p>
-          <p>Condition: {{ sportStuff.condition }}</p>
-          <p>Price: {{ sportStuff.price }}</p>
-          <p>City: {{ sportStuff.city }}</p>
-          <ion-button (click)="deleteBtn(sportStuff.id)">
-            <ion-icon name="trash"></ion-icon>
-          </ion-button>
-          <ion-button [routerLink]="['/', 'sport-stuff', 'stuff-details', sportStuff.id]">
-            <ion-icon name="create"></ion-icon>
-          </ion-button>
+          <p text-justify><b>Description:</b> {{ sportStuff.description }}</p>
+          <p><b>Condition:</b> {{ sportStuff.condition }}</p>
+          <p><b>Price:</b> {{ sportStuff.price }}</p>
+          <p><b>City:</b> {{ sportStuff.city }}</p>
+          <div>
+            <ion-button (click)="deleteBtn(sportStuff.id)">
+              <ion-icon name="trash"></ion-icon>
+            </ion-button>
+            <ion-button [routerLink]="['/', 'sport-stuff', 'stuff-details', sportStuff.id]">
+              <ion-icon name="create"></ion-icon>
+            </ion-button>
+          </div>
+          <h6><b>Photos</b></h6>
+            <ion-img [src]="sportStuff.imgUrl"></ion-img> 
         </ion-card>
-      </ion-col>
+      <!-- </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
